# inai_picnic_planner

app/: .cache.sqlite  .gitignore  pyproject.toml  readme.md
app/alembic/: env.py
app/alembic/versions/: 7a22b37b0c90_create_locations_table.py  82715f1f8b6e_create_weatherdata_table.py
app/app/: worker.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: weather.py
app/app/businesslogics/: weatherapi.py
app/app/core/: config.py
app/app/crud/: __init__.py  crud_location.py
app/app/models/: __init__.py  items.py  locations.py  msg.py  tokens.py  user.py  weatherdata.py
app/app/schemas/: __init__.py  locations.py  weatherdata.py
